# web-digikam-gallery

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/liquid/: index.liquid
